--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .NavbarItems {
-  background: linear-gradient(90deg, rgb(110, 94, 254) 0%, rgba(73,63,252,1) 100%);
-  height: 80px;
+  background-color: #96551b;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,7 +14,7 @@
   cursor: pointer;
 }
 
-.fa-react {
+.fa-book {
   margin-left: 0.5rem;
   font-size: 1.6rem;
 }
@@ -80,11 +80,6 @@
     padding: 2rem;
     width: 100%;
     display: table;
-  }
-
-  .nav-links:hover {
-    background-color: #7577fa;
-    border-radius: 0;
   }
 
   .navbar-logo {
